--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <section class="secao">
     <h2>Qual programa gostaria de utilizar?</h2>
+    <section class="secao">
     
-    <span><a href="/prog1.html">Par ou Ímpar</a></span>
-    <span><a href="/prog2.html">Ordem Decrescente</a></span>
-    <span><a href="/prog3.html">Cálculo IMC</a></span>
-    <span><a href="/prog4.html">Verificação de Triangulo</a></span>
+    <a href="/prog1.html"><span>Par ou Ímpar</span></a>
+    <a href="/prog2.html"><span>Ordem Crescente</span></a>
+    <a href="/prog3.html"><span>Cálculo média</span></a>
+    <a href="/prog4.html"><span>Verificação de Triangulo</span></a>
     </section>
     <script src="./script.js"></script>
 </body>
