--- a/prog2.html
+++ b/prog2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ordem decrescente</title>
+    <title>Ordem crescente</title>
 </head>
 <body>
     
@@ -30,7 +30,7 @@
 
     </form>
         
-    <button type="submit" onclick="ordemdecrescente()">Enviar</button>
+    <button type="submit" onclick="ordemcrescente()">Enviar</button>
     <p id="resultado"></p>
 
     <script src="./script.js"></script>
